apps/metube/namespace.yaml
# apps/metube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metube
  annotations:
    argocd.argoproj.io/sync-wave: "0"
